{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 43,
  "lineage": "50ac6135-af2b-29da-09ad-f61219e5a576",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_analizador",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712899854:internet-gateway/igw-078f2739867754f74",
            "id": "igw-078f2739867754f74",
            "owner_id": "339712899854",
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-igw",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-igw",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "vpc_id": "vpc-05127a3c05028f376"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712899854:loadbalancer/net/sensor-analyzer-app-nlb/7ce581641caa78f5",
            "arn_suffix": "net/sensor-analyzer-app-nlb/7ce581641caa78f5",
            "dns_name": "sensor-analyzer-app-nlb-7ce581641caa78f5.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712899854:loadbalancer/net/sensor-analyzer-app-nlb/7ce581641caa78f5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sensor-analyzer-app-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b2e5996bd9732947"
              }
            ],
            "subnets": [
              "subnet-0b2e5996bd9732947"
            ],
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-app-nlb",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-app-nlb",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "vpc_id": "vpc-05127a3c05028f376",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.analizador_public_subnet",
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mirror_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712899854:loadbalancer/net/sensor-analyzer-mirror-nlb/2a93c68d5af5f48f",
            "arn_suffix": "net/sensor-analyzer-mirror-nlb/2a93c68d5af5f48f",
            "dns_name": "sensor-analyzer-mirror-nlb-2a93c68d5af5f48f.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712899854:loadbalancer/net/sensor-analyzer-mirror-nlb/2a93c68d5af5f48f",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sensor-analyzer-mirror-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b2e5996bd9732947"
              },
              {
                "subnet_id": "subnet-0b70f21819f55829c"
              }
            ],
            "subnets": [
              "subnet-0b2e5996bd9732947",
              "subnet-0b70f21819f55829c"
            ],
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-mirror-nlb",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-mirror-nlb",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "vpc_id": "vpc-05127a3c05028f376",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.analizador_private_subnet",
            "aws_subnet.analizador_public_subnet",
            "aws_vpc.vpc_analizador"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712899854:listener/net/sensor-analyzer-app-nlb/7ce581641caa78f5/c2cdd960c53cd72f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339712899854:targetgroup/sensor-analyzer-http-tg2/25580090b80434ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712899854:listener/net/sensor-analyzer-app-nlb/7ce581641caa78f5/c2cdd960c53cd72f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339712899854:loadbalancer/net/sensor-analyzer-app-nlb/7ce581641caa78f5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_nlb",
            "aws_lb_target_group.http_tg2",
            "aws_subnet.analizador_public_subnet",
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http_tg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712899854:targetgroup/sensor-analyzer-http-tg2/25580090b80434ba",
            "arn_suffix": "targetgroup/sensor-analyzer-http-tg2/25580090b80434ba",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712899854:targetgroup/sensor-analyzer-http-tg2/25580090b80434ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:339712899854:loadbalancer/net/sensor-analyzer-app-nlb/7ce581641caa78f5"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sensor-analyzer-http-tg2",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-http-tg",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-http-tg",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05127a3c05028f376"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vxlan_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712899854:targetgroup/sensor-analyzer-vxlan-tg/09e9f15b78d5447b",
            "arn_suffix": "targetgroup/sensor-analyzer-vxlan-tg/09e9f15b78d5447b",
            "connection_termination": true,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "8080",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712899854:targetgroup/sensor-analyzer-vxlan-tg/09e9f15b78d5447b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sensor-analyzer-vxlan-tg",
            "port": 4789,
            "preserve_client_ip": "true",
            "protocol": "UDP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-vxlan-tg",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-vxlan-tg",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05127a3c05028f376"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "analizador_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712899854:route-table/rtb-0325a364c206dc4c9",
            "id": "rtb-0325a364c206dc4c9",
            "owner_id": "339712899854",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-private-rt",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-private-rt",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "timeouts": null,
            "vpc_id": "vpc-05127a3c05028f376"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "analizador_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712899854:route-table/rtb-0611847eb47707c8d",
            "id": "rtb-0611847eb47707c8d",
            "owner_id": "339712899854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078f2739867754f74",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-public-rt",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-public-rt",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "timeouts": null,
            "vpc_id": "vpc-05127a3c05028f376"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_analizador",
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "analizador_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffffcba5d35932ce",
            "route_table_id": "rtb-0325a364c206dc4c9",
            "subnet_id": "subnet-0b70f21819f55829c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.analizador_private_rt",
            "aws_subnet.analizador_private_subnet",
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "analizador_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe56608cb2f59799",
            "route_table_id": "rtb-0611847eb47707c8d",
            "subnet_id": "subnet-0b2e5996bd9732947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_analizador",
            "aws_route_table.analizador_public_rt",
            "aws_subnet.analizador_public_subnet",
            "aws_vpc.vpc_analizador"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_mirror",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712899854:security-group/sg-0bdf330be8060d619",
            "description": "SG para ECS sensor (mirroring via NLB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdf330be8060d619",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Health 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VXLAN UDP/4789",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              }
            ],
            "name": "sensor-analyzer-ecs-mirror20251101234559503500000002",
            "name_prefix": "sensor-analyzer-ecs-mirror",
            "owner_id": "339712899854",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-ecs-mirror-sg",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-ecs-mirror-sg",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "timeouts": null,
            "vpc_id": "vpc-05127a3c05028f376"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_analizador"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "analizador_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712899854:subnet/subnet-0b70f21819f55829c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b70f21819f55829c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712899854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-private",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-private",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "vpc_id": "vpc-05127a3c05028f376"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_analizador"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "analizador_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712899854:subnet/subnet-0b2e5996bd9732947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2e5996bd9732947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712899854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-public",
              "Project": "sensor-analyzer"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-public",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "vpc_id": "vpc-05127a3c05028f376"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_analizador"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_analizador",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712899854:vpc/vpc-05127a3c05028f376",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-010d1c1f6fd05e981",
            "default_route_table_id": "rtb-0b47b22cb150f8f01",
            "default_security_group_id": "sg-0392a5129c120c712",
            "dhcp_options_id": "dopt-094744fd3ca905cce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05127a3c05028f376",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b47b22cb150f8f01",
            "owner_id": "339712899854",
            "tags": {
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-vpc",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            },
            "tags_all": {
              "Account": "339712899854",
              "Environment": "production",
              "Name": "sensor-analyzer-analizador-vpc",
              "Owner": "rodrigo",
              "Project": "sensor-analyzer",
              "Purpose": "Ransomware-Detection",
              "Type": "Analizador"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}